fixed some methods
